[tool.poetry]
name = "comedian"
version = "0.1.0"
description = "Automatic GitHub Events API standup generator"
authors = ["0x2b3bfa0 <0x2b3bfa0@googlemail.com>"]
license = "AGPL3"

[tool.poetry.dependencies]
python = "^3.8"
ghapi = "^0.1.17"
pendulum = "^2.1.2"
slackclient = "^2.9.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
